--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.12",
     "next": "15.5.3",
